apps/media-pipeline/handbrake-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: handbrake
  namespace: default
spec:
  selector:
    app: handbrake
  ports:
    - name: web-ui
      port: 5800
      targetPort: web-ui
      protocol: TCP
  type: NodePort
